feat: allow registree to retrieve event info, to update event info
